--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             overflow: hidden;
         }
 
-        /* floating blinking hearts */
+        /* blinking hearts */
         .bg-heart {
             position: absolute;
             color: rgba(255, 255, 255, 0.7);
@@ -41,6 +41,8 @@
         }
 
         .container {
+            position: relative;
+            overflow: hidden;
             text-align: center;
             color: white;
             background: rgba(255, 255, 255, 0.15);
@@ -48,14 +50,16 @@
             border-radius: 20px;
             backdrop-filter: blur(10px);
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
-            width: 95%;
+            width: 100%;
             max-width: 420px;
+            margin: 15px;
+            box-sizing: border-box;
             z-index: 2;
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 32px;
+            font-size: 30px;
             margin-bottom: 10px;
         }
 
@@ -66,11 +70,14 @@
             border-radius: 15px;
             margin: 15px 0;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+            position: relative;
+            z-index: 2;
         }
 
         .buttons {
             position: relative;
             height: 120px;
+            z-index: 2;
         }
 
         button {
@@ -103,6 +110,8 @@
             font-size: 26px;
             margin-top: 15px;
             animation: pop 0.4s ease;
+            position: relative;
+            z-index: 2;
         }
 
         @keyframes pop {
@@ -121,6 +130,7 @@
             top: -20px;
             animation: drop 2s linear forwards;
             pointer-events: none;
+            z-index: 3;
         }
 
         @keyframes drop {
@@ -134,7 +144,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" id="container">
         <h1>Will you be my Valentine? ❤️</h1>
 
         <video id="valentineVideo" src="asking.mp4" autoplay loop muted playsinline></video>
@@ -153,11 +163,12 @@
         const result = document.getElementById("result");
         const video = document.getElementById("valentineVideo");
         const area = document.getElementById("btnArea");
+        const container = document.getElementById("container");
 
         let moveCount = 0;
 
-        /* background blinking hearts */
-        for (let i = 0; i < 20; i++) {
+        /* background hearts */
+        for (let i = 0; i < 15; i++) {
             const heart = document.createElement("div");
             heart.innerHTML = "💗";
             heart.className = "bg-heart";
@@ -167,8 +178,19 @@
             document.body.appendChild(heart);
         }
 
-        /* YES button smooth far movement */
-        yesBtn.addEventListener("mouseover", () => {
+        /* hearts inside container */
+        for (let i = 0; i < 8; i++) {
+            const heart = document.createElement("div");
+            heart.innerHTML = "💖";
+            heart.className = "bg-heart";
+            heart.style.left = Math.random() * 90 + "%";
+            heart.style.top = Math.random() * 90 + "%";
+            heart.style.fontSize = (Math.random() * 12 + 10) + "px";
+            container.appendChild(heart);
+        }
+
+        /* YES movement */
+        function moveYesButton() {
             if (moveCount < 6) {
                 moveCount++;
 
@@ -181,6 +203,13 @@
                 yesBtn.style.left = x + "px";
                 yesBtn.style.top = y + "px";
             }
+        }
+
+        yesBtn.addEventListener("mouseover", moveYesButton);
+
+        yesBtn.addEventListener("touchstart", (e) => {
+            e.preventDefault();
+            moveYesButton();
         });
 
         /* YES clicked */
@@ -191,18 +220,16 @@
                 video.src = "accepted.mp4";
                 video.play();
 
-                // Hide NO button
                 noBtn.style.opacity = "0";
                 noBtn.style.pointerEvents = "none";
 
-                // Victory position
                 yesBtn.style.left = "50%";
                 yesBtn.style.top = "35px";
                 yesBtn.style.transform = "translateX(-50%) scale(1.2)";
             }
         });
 
-        /* NO clicked → heart rain */
+        /* NO clicked */
         noBtn.addEventListener("click", () => {
             result.innerHTML = "<div class='success'>No ah? Try again 😜</div>";
 
